crates/cargo-tsuno/tests/fixtures/verify_cli/fail/rejects_inv_inside_nested_block.rs
#[tsuno::verify]
fn bad_loop(mut x: i32) {
    while x < 3 {
        {
            tsuno::inv!("x < 3");
        }
        x = x + 1;
        break;
    }
}

fn main() {}
